--- a/Blog.html
+++ b/Blog.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="fontawesome/css/all.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/responsive.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
     <link rel="icon" href="images/home-image/favicon-icon.png" type="image/icon"> 
    
