--- a/Blog-2.html
+++ b/Blog-2.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/responsive.css" type="text/css">
     <link rel="icon" href="images/home-image/favicon-icon.png" type="image/icon"> 
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" type="text/css">
+
    
     
 </head>
