--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active theme-text-color" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active theme-text-color" aria-current="page" href="/">Home</a>
                   </li>
                   <li class="nav-item dropdown ">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"  aria-haspopup="true" aria-expanded="false">
